# introduction-to-machine-learning

./: .gitignore  README.md
Introduction to ML/: Convolutional NN Assigment.ipynb  Convolutional NN.ipynb  Multilayer Perceptron.ipynb  main.py  requirements.txt
Introduction to Supervised Learning/: resources.md
Large Language Models/: .$Diagrams.drawio.bkp  Journey.md  Readme.md  (+2 more)
Large Language Models/intro-to-gpt/: .gitignore  Allucinations.md  Evaluating an N-Gram Language Model.ipynb  Generating Text with N-gram model.ipynb  Generating Text.md  Hallucinations.md  Intrinsic Evaluation Perplexity.md  Intro to GPT Table of Contents.md  Intro to GPT.md  N-Gram.ipynb  n_gram.py  pyproject.toml
Large Language Models/intro-to-gpt/Chatbots, RLHF, and ChatGPT/: Basic Chatbot.ipynb  Chatbots, RLHF, and ChatGPT.md
Large Language Models/intro-to-gpt/GPT/: GPT and BERT.md  Language Generation with Transformers.ipynb  Using GPT.md
Large Language Models/intro-to-gpt/Miselaneous/: Cosine Similarity.ipynb
Large Language Models/intro-to-gpt/Neural Language Models & Transformers/: Calculating Perplexity.ipynb  How are Transformers trained?.md  Language Modelling with Transformers.ipynb  Neural language models.md  The Transformer architecture.md
Large Language Models/intro-to-gpt/tokenization/: Representing text with numerical vectors.md  Tokenization.ipynb  Words, tokens, or sub-tokens.md
Large Language Models/rust-candle/: Cargo.toml
Large Language Models/rust-candle/bert-example/: Cargo.toml
Large Language Models/rust-candle/bert-example/src/: args.rs  main.rs
Large Language Models/rust-candle/bert-example/src/utils/: mod.rs
Large Language Models/rust-candle/hello_world/: Cargo.toml
Large Language Models/rust-candle/hello_world/src/: main.rs
(+173 files in other folders)
